# GAP

./: .gitignore  ABLATION_MATRIX.md  CODEX_HANDOFF.md  DIAGNOSTIC_SUITE.md  FIGURE_CAPTIONS.md  MANIFEST.md  MODEL_SPEC.md  PAPER_SPINE.md  README.md  RELATED_WORK_BOUNDARY.md  RUN_MATRIX.md  pyproject.toml
examples/: run_complement_dynamics_sanity.py  run_divergence_free_sanity.py  run_edge_flow_sanity.py  run_learned_structure_diagnostics.py
external_data/pdebench_ns/: ns_64x64_divergence_benchmark.json  ns_incomp_64x64_pairs.metadata.json
external_data/rayleigh_benard/: README.md  dataloader.py  rb_16x16_benchmark.json  rb_16x16_mean_benchmark.json  rb_32x32_mean_benchmark.json  rb_velocity_16x16_pairs.metadata.json  rb_velocity_32x32_pairs.metadata.json
gap_protected_transformers/: __init__.py  benchmark.py  blocks.py  data.py  datasets.py  diagnostics.py  evaluate.py  experiments.py  grid_operators.py  hierarchy.py  logging_utils.py  make_constraint.py  matrix_free.py  models.py  operators.py  prepare_pdebench_ns.py  prepare_rayleigh_benard.py  projections.py  routing.py  solvers.py  toy_complexes.py  train.py  training.py  validate.py  visualize.py
runs/: rayleigh_benard_32x32_divergence_validation.json
runs/divergence_free_sanity/: metrics.csv  metrics.json
runs/edge_flow_complement/: metrics.csv  metrics.json
runs/edge_flow_sanity/: metrics.csv  metrics.json
runs/learned_structure_diagnostics/: metrics.csv  metrics.json
runs/rayleigh_benard_16x16/: validation.json  (+2 more)
src/: gap_transformer_skeleton.py
tests/: test_benchmark_runner.py  test_benchmark_scale.py  test_blocks.py  test_commutator.py  test_diagnostics.py  test_experiments.py  test_hierarchy_routing.py  test_implicit_projector.py  test_pdebench_ns.py  test_phase1_pdebench_artifacts.py  test_production_training.py  test_projection.py  test_scaled_external_artifacts.py  test_visualize.py
(+85 files in other folders)
