[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gap-protected-transformers"
version = "0.1.0"
description = "Protected-mode Transformer and operator-learning scaffold with leakage diagnostics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "torch",
]

[project.optional-dependencies]
dev = ["pytest"]
logging = ["wandb"]

[project.scripts]
gap-train = "gap_protected_transformers.train:main"
gap-evaluate = "gap_protected_transformers.evaluate:main"
gap-experiments = "gap_protected_transformers.experiments:main"

[tool.pytest.ini_options]
pythonpath = ["."]
